Update default page routes

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -4,10 +4,10 @@ import { AppWindow, Gamepad2, LayoutGrid, Menu, Settings2 } from "lucide-astro";
 import Layout from "./Layout.astro";
 
 const navLinks = [
-  { href: "/ga", text: "Games", Icon: Gamepad2 },
-  { href: "/ap", text: "Apps", Icon: LayoutGrid },
-  { href: "/tb", text: "Tabs", Icon: AppWindow },
-  { href: "/st", text: "Settings", Icon: Settings2 },
+  { href: "/games", text: "Games", Icon: Gamepad2 },
+  { href: "/apps", text: "Apps", Icon: LayoutGrid },
+  { href: "/tabs", text: "Tabs", Icon: AppWindow },
+  { href: "/settings", text: "Settings", Icon: Settings2 },
 ];
 ---
 
