--- a/src/pages/inner.astro
+++ b/src/pages/inner.astro
@@ -76,7 +76,7 @@ import { Search } from "lucide-astro";
             url = `https://${url}`;
           }
           sessionStorage.setItem("goUrl", url);
-          location.replace("/tb");
+          location.replace("/tabs");
         }
       });
     }
