--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,7 @@ import { Search } from "lucide-astro";
             url = `https://${url}`;
           }
           sessionStorage.setItem("goUrl", url);
-          location.replace("/tb");
+          location.replace("/tabs");
         }
       });
     }
