--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,7 +1,7 @@
 ---
 import Obfuscated from "@/components/Obfuscated.astro";
+import Layout from "@/layouts/Layout.astro";
 import { AppWindow, Gamepad2, LayoutGrid, Menu, Settings2 } from "lucide-astro";
-import Layout from "./Layout.astro";
 
 const navLinks = [
   { href: "/games", text: "Games", Icon: Gamepad2 },
