--- a/src/pages/apps.astro
+++ b/src/pages/apps.astro
@@ -1,7 +1,7 @@
 ---
 import AssetCard from "@/components/AssetCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { ASSET_URL, type Asset } from "@/lib/assets";
+import { ASSET_URL, type Asset } from "@/lib/assets.ts";
 import { PlusCircle } from "lucide-astro";
 
 export const prerender = false;
