Move home scripts to a seperate file

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,30 +21,4 @@ import { Search } from "lucide-astro";
     </div>
   </div>
 </Layout>
-<script is:inline>
-  let searchUrl = localStorage.getItem("engine") || "https://www.google.com/search?q=";
-  let input = document.getElementById("search");
-  function isUrl(val = "") {
-    if (/^http(s?):\/\//.test(val) || (val.includes(".") && !val.includes(" "))) {
-      return true;
-    }
-    return false;
-  }
-  document.addEventListener("astro:page-load", () => {
-    if (input) {
-      input.focus();
-      input.addEventListener("keydown", (e) => {
-        if (e.key === "Enter") {
-          let url = input.value;
-          if (!isUrl(url)) {
-            url = searchUrl + url;
-          } else if (!(url.startsWith("https://") || url.startsWith("http://"))) {
-            url = `https://${url}`;
-          }
-          sessionStorage.setItem("goUrl", url);
-          location.replace("/tabs");
-        }
-      });
-    }
-  });
-</script>
+<script src="@/lib/home.ts"></script>
