Format + ignore minified json files

--- a/src/pages/tabs.astro
+++ b/src/pages/tabs.astro
@@ -1,6 +1,15 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { ArrowLeft, ArrowRight, Home, Loader2, Maximize2, Plus, RotateCw, Star } from "lucide-astro";
+import {
+  ArrowLeft,
+  ArrowRight,
+  Home,
+  Loader2,
+  Maximize2,
+  Plus,
+  RotateCw,
+  Star,
+} from "lucide-astro";
 ---
 
 <script src="@/lib/tabs.ts"></script>
