--- a/src/pages/apps.astro
+++ b/src/pages/apps.astro
@@ -3,7 +3,7 @@ import fs from "node:fs";
 import path from "node:path";
 import AssetCard from "@/components/AssetCard.astro";
 import Layout from "@/layouts/Main.astro";
-import { type Asset } from "@/lib/assets.ts";
+import type { Asset } from "@/lib/assets.ts";
 import { PlusCircle } from "lucide-astro";
 
 export const prerender = false;
