--- a/src/pages/tabs.astro
+++ b/src/pages/tabs.astro
@@ -41,12 +41,7 @@ import {
       </button>
     </div>
     <div class="flex-grow flex items-center justify-center mx-4">
-      <input
-        type="text"
-        placeholder="Search or enter a new URL"
-        id="inp"
-        class="w-full h-9 px-4 rounded-md text-text border border-border bg-background-secondary shadow-sm outline-none focus:ring-1 focus:ring-accent placeholder:text-placeholder"
-      />
+      <input type="text" placeholder="Search or enter a new URL" id="inp" class="w-full h-9 px-4 rounded-md text-text border border-border bg-background-secondary shadow-sm outline-none focus:ring-1 focus:ring-accent placeholder:text-placeholder" />
     </div>
     <div class="flex items-center space-x-2">
       <button title="Fullscreen" id="fullscreen" class="flex items-center justify-center p-2 rounded-full hover:bg-interactive">
