--- a/src/components/AssetCard.astro
+++ b/src/components/AssetCard.astro
@@ -13,9 +13,7 @@ export const prerender = false;
 <button data-asset={JSON.stringify(asset)}>
   <div class="relative group cursor-pointer transition-all duration-150 hover:scale-105">
     <Image loading="lazy" src={asset.image} alt={asset.name} height={145} width={145} class="h-36 aspect-square object-cover rounded-md transition-all duration-150" />
-    <div
-      class="absolute bottom-0 left-0 w-full h-full bg-black/20 opacity-0 group-hover:opacity-100 rounded-b-md duration-150 flex items-end p-2 px-4 font-semibold transition-all z-10"
-    >
+    <div class="absolute bottom-0 left-0 w-full h-full bg-black/20 opacity-0 group-hover:opacity-100 rounded-b-md duration-150 flex items-end p-2 px-4 font-semibold transition-all z-10">
       <section class="inline-flex items-center gap-2 text-white" class:list={{ "text-red-600": asset.error, "text-yellow-400": asset.partial }}>
         {asset.custom && <UserRoundPlus class="size-5" />}
         {asset.partial && <CircleAlert class="size-5" />}
