--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,12 +11,7 @@ import { Search } from "lucide-astro";
     <div class="items-center justify-center w-full max-w-screen-md">
       <form class="relative">
         <Search class="absolute left-3 top-1/2 transform -translate-y-1/2 h-5 w-5 text-interactive-secondary" />
-        <input
-          id="search"
-          class="h-15 w-full border px-3 text-sm pl-10 py-6 bg-interactive border-border text-text focus:outline-none rounded-xl"
-          placeholder="Search or type a URL"
-          type="search"
-        />
+        <input id="search" class="h-15 w-full border px-3 text-sm pl-10 py-6 bg-interactive border-border text-text focus:outline-none rounded-xl" placeholder="Search or type a URL" type="search" />
       </form>
     </div>
   </div>
