chore(prettier): update config and format code

--- a/src/pages/settings.astro
+++ b/src/pages/settings.astro
@@ -3,15 +3,7 @@ import ArrowButton from "@/components/ArrowButton.astro";
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
 import Layout from "@/layouts/Main.astro";
-import {
-  ExternalLink,
-  EyeOff,
-  Info,
-  Search,
-  Settings2,
-  Siren,
-  SwatchBook,
-} from "lucide-astro";
+import { ExternalLink, EyeOff, Info, Search, Settings2, Siren, SwatchBook } from "lucide-astro";
 ---
 
 <Layout>
