--- a/src/pages/tabs.astro
+++ b/src/pages/tabs.astro
@@ -1,15 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import {
-  ArrowLeft,
-  ArrowRight,
-  Home,
-  Loader2,
-  Maximize2,
-  Plus,
-  RotateCw,
-  Star,
-} from "lucide-astro";
+import { ArrowLeft, ArrowRight, Home, Loader2, Maximize2, Plus, RotateCw, Star } from "lucide-astro";
 ---
 
 <script src="@/lib/tabs.ts"></script>
