--- a/src/components/Dropdown.astro
+++ b/src/components/Dropdown.astro
@@ -9,14 +9,7 @@ const { id, text, menu } = Astro.props;
 ---
 
 <div class="relative">
-  <button
-    id={`${id}Button`}
-    data-dropdown-toggle={id}
-    data-dropdown-delay="500"
-    data-dropdown-trigger="hover"
-    class="mt-2 text-text bg-dropdown focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
-    type="button"
-  >
+  <button id={`${id}Button`} data-dropdown-toggle={id} data-dropdown-delay="500" data-dropdown-trigger="hover" class="mt-2 text-text bg-dropdown focus:outline-none font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center" type="button">
     {text}
     <svg class="w-2.5 h-2.5 ms-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"></path>
