Fixed pages loading slow while in dev mode (Thanks @Nitix for the solution: https://github.com/dzeiocom/lucide-astro/issues/28)

--- a/src/components/AssetCard.astro
+++ b/src/components/AssetCard.astro
@@ -4,7 +4,11 @@ interface Props {
 }
 
 import { Image } from "astro:assets";
-import { Ban, CircleAlert, UserRoundPlus } from "lucide-astro";
+
+import Ban from "lucide-astro/Ban";
+import CircleAlert from "lucide-astro/CircleAlert";
+import UserRoundPlus from "lucide-astro/UserRoundPlus";
+
 import type { Asset } from "@/lib/assets.ts";
 
 const { asset } = Astro.props;
