--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,5 +1,10 @@
 ---
-import { AppWindow, Gamepad2, LayoutGrid, Menu, Settings2 } from "lucide-astro";
+import AppWindow from "lucide-astro/AppWindow";
+import Gamepad2 from "lucide-astro/Gamepad2";
+import LayoutGrid from "lucide-astro/LayoutGrid";
+import Menu from "lucide-astro/Menu";
+import Settings2 from "lucide-astro/Settings2";
+
 import Obfuscated from "@/components/Obfuscated.astro";
 import Layout from "@/layouts/Layout.astro";
 
