--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import { Search } from "lucide-astro";
+import Search from "lucide-astro/Search";
 import Layout from "@/layouts/Main.astro";
 ---
 
