--- a/src/pages/settings.astro
+++ b/src/pages/settings.astro
@@ -1,5 +1,12 @@
 ---
-import { ExternalLink, EyeOff, Info, Search, Settings2, Siren, SwatchBook } from "lucide-astro";
+import ExternalLink from "lucide-astro/ExternalLink";
+import EyeOff from "lucide-astro/EyeOff";
+import Info from "lucide-astro/Info";
+import Search from "lucide-astro/Search";
+import Settings2 from "lucide-astro/Settings2";
+import Siren from "lucide-astro/Siren";
+import SwatchBook from "lucide-astro/SwatchBook";
+
 import ArrowButton from "@/components/ArrowButton.astro";
 import Dropdown from "@/components/Dropdown.astro";
 import SettingsCard from "@/components/SettingsCard.astro";
