--- a/src/pages/tabs.astro
+++ b/src/pages/tabs.astro
@@ -1,5 +1,13 @@
 ---
-import { ArrowLeft, ArrowRight, Home, Loader2, Maximize2, Plus, RotateCw, Star } from "lucide-astro";
+import ArrowLeft from "lucide-astro/ArrowLeft";
+import ArrowRight from "lucide-astro/ArrowRight";
+import Home from "lucide-astro/Home";
+import Loader2 from "lucide-astro/Loader2";
+import Maximize2 from "lucide-astro/Maximize2";
+import Plus from "lucide-astro/Plus";
+import RotateCw from "lucide-astro/RotateCw";
+import Star from "lucide-astro/Star";
+
 import Layout from "@/layouts/Layout.astro";
 ---
 
