--- a/src/pages/settings.astro
+++ b/src/pages/settings.astro
@@ -128,6 +128,10 @@ import Layout from "@/layouts/Main.astro";
             { value: "Midnight", text: "Midnight" },
             { value: "White", text: "Light" },
             { value: "Black", text: "Black" },
+            { value: "Dusk", text: "Dusk" },
+            { value: "Rosewood", text: "Rosewood" },
+            { value: "Citrine", text: "Citrine" },
+            { value: "Slate", text: "Slate" },
           ]}
         />
       </SettingsCard>
