Automatically compress json when building the server

--- a/src/pages/apps.astro
+++ b/src/pages/apps.astro
@@ -8,7 +8,7 @@ import type { Asset } from "@/lib/assets.ts";
 
 export const prerender = false;
 
-const local = path.resolve("./public/assets/json/Apps.min.json");
+const local = path.resolve("./public/assets/json/Apps.json");
 
 let apps: Asset[];
 
