--- a/src/pages/games.astro
+++ b/src/pages/games.astro
@@ -8,7 +8,7 @@ import type { Asset } from "@/lib/assets.ts";
 
 export const prerender = false;
 
-const local = path.resolve("./public/assets/json/Games.min.json");
+const local = path.resolve("./public/assets/json/Games.json");
 
 let games: Asset[];
 
