--- a/src/pages/settings.astro
+++ b/src/pages/settings.astro
@@ -159,5 +159,5 @@ import Layout from "@/layouts/Main.astro";
       <SettingsCard description="Customize the theme of the site." title="UI" Icon={SwatchBook} />
     </section>
   </div>
-  <script is:inline src="/src/lib/settings.ts"></script>
+  <script src="/src/lib/settings.ts"></script>
 </Layout>
